[package]
name = "tower-sessions-firestore-store"
description = "tower-sessions store using Cloud Firestore"
version = "0.1.1"
edition = "2021"
authors = ["Brint E. Kriebel, At the Tavern <brint@tavern.at>"]
license = "MIT"
homepage = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
keywords = ["axum", "sessions", "tower", "firestore", "google-cloud"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
documentation = "https://docs.rs/tower-sessions-firestore-store"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
firestore = "0.39.0"
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "1.0.56"
tower-sessions-core = "0.9.1"

[dev-dependencies]
axum = "0.7.4"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-sessions = "0.9.1"
