[package]
name = "tower-sessions-firestore-store"
description = "tower-sessions store using Cloud Firestore"
version = "0.2.1"
edition = "2021"
authors = ["Brint E. Kriebel, At the Tavern <brint@tavern.at>"]
license = "MIT"
homepage = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
keywords = ["axum", "sessions", "tower", "firestore", "google-cloud"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/AtTheTavern/tower-sessions-firestore-store"
documentation = "https://docs.rs/tower-sessions-firestore-store"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
firestore = "0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0"
time = "0.3"
tower-sessions-core = "0.10"
uuid = "1.7.0"

[dev-dependencies]
axum = "0.7"
time = "0.3"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tower-sessions = "0.10"
